--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   </head>
   <body class="site">
     <div class="container">
-      <div class="sitetitle">rankle</div>
+      <div class="sitetitle">coming soon</div>
 
-      <div class="listSelect">
+      <!-- <div class="listSelect">
         <div class="marvel listItem clicked">
           <span class="material-icons unchecked">
             check_box_outline_blank
@@ -74,7 +74,7 @@
       <div class="otheruser">
         <ul id="marvel" class="list"></ul>
         <ul id="starwars" class="list"></ul>
-      </div>
+      </div> -->
     </div>
     <!-- scripties
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
