--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     />
     <!-- Metastuff
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta name="description" content="desc" />
-    <meta property="og:description" content="rank movie lists" />
+    <meta name="description" content="rankle your lists!" />
+    <meta property="og:description" content="rankle your lists!" />
     <meta property="og:image" content="../thumb.png" />
-    <meta name="robots" content="noindex" />
     <title>rankle</title>
 
     <!-- Mobile Specific Metas
