--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta name="description" content="rankle your lists!" />
     <meta property="og:description" content="rankle your lists!" />
-    <meta property="og:image" content="../thumb.png" />
+    <meta
+      property="og:image"
+      content="https://www.dugward.com/rankle/thumb.png"
+    />
     <title>rankle</title>
 
     <!-- Mobile Specific Metas
